# DnD_Treasure_Generator_3.5

./: README.md  pyproject.toml  requirements.txt
dnd_treasure/: cli.py
dnd_treasure/core/: coins.py  dice.py  generator.py  goods.py  items.py  keywords.py  models.py
dnd_treasure/data/: loader.py  models.py
dnd_treasure/data/charts/dmg/: alignments.yaml  armor.yaml  armor_major.yaml  armor_medium.yaml  armor_minor.yaml  armor_specific_major.yaml  armor_specific_medium.yaml  armor_specific_minor.yaml  art_tier1.yaml  art_tier10.yaml  art_tier11.yaml  art_tier12.yaml  art_tier2.yaml  art_tier3.yaml  art_tier4.yaml  art_tier5.yaml  art_tier6.yaml  art_tier7.yaml  art_tier8.yaml  art_tier9.yaml  bane_creature_type.yaml  common_melee_weapons.yaml  energy.yaml  gems_tier1.yaml  gems_tier2.yaml  gems_tier3.yaml  gems_tier4.yaml  gems_tier5.yaml  gems_tier6.yaml  melee_weapon_major.yaml  melee_weapon_medium.yaml  melee_weapon_minor.yaml  potions_major.yaml  potions_medium.yaml  potions_minor.yaml  ranged_weapon_major.yaml  ranged_weapon_medium.yaml  ranged_weapon_minor.yaml  ranged_weapons.yaml  rings_major.yaml  (+23 more)
dnd_treasure/formatters/: base.py  text.py
docs/plans/: 2025-10-28-python-treasure-generator.md
scripts/: convert_charts.py
tests/: test_cli.py  test_coins.py  test_data_models.py  test_dice.py  test_formatters.py  test_generator.py  test_keywords.py  test_loader.py  test_models.py
