[project]
name = "dnd-treasure"
version = "0.1.0"
description = "D&D 3.5 Treasure Generator"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
dnd-treasure = "dnd_treasure.cli:main"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dnd_treasure*"]
exclude = ["Treasure_Generator*"]
